# TCIA

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py
src/tcia/: __init__.py  __main__.py  _cli.py  _errors.py  _resources.py  _types.py  _utils.py  _version.py  api.py
tcia/: __init__.py  __main__.py  _version.py  api.py  cli.py
tests/: conftest.py  test_api.py
