[metadata]
name = tcia
version = file: src/tcia/VERSION
url = https://github.com/geoffrey-a-reed/TCIA
author = Geoffrey A. Reed
author_email = geoffrey.a.reed@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Topic :: Communications :: File Sharing
    Topic :: Internet :: WWW/HTTP
    Topic :: Scientific/Engineering :: Medical Science Apps.
license = Apache License 2.0
license_file = LICENSE
description = A REST client for The Cancer Imaging Archive (TCIA)
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
zip_safe = false
install_requires =
    click
    requests
python_requires = >= 3.6
tests_require =
    pytest
include_package_data = true
packages = find:
package_dir =
    =src

[options.entry_points]
console_scripts =
    tcia-client = tcia._cli:main

[options.packages.find]
where = src
exclude = tests
